fix #296 alignment issue fixed with title if searched by food type

--- a/src/styles/components/better.css
+++ b/src/styles/components/better.css
@@ -438,6 +438,10 @@ input[type=text]:focus:not([readonly]) {
   height: 8em;
 }
 
+.margin-fix {
+  margin-left: -1.5em;
+}
+
 /* VIEW HAMPER PAGE */
 
 .x-button {
